Avance hasta two way binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div style="text-align: center;">
-    <h1>Bienvenido: {{usuario}}!</h1>
+    <h1>Bienvenido: {{usuario}}!</h1><br>
+    <mat-slider min="1" max="100" step="1" value="1"></mat-slider><br>
     <app-personas></app-personas>
 </div>
