--- a/src/app/persona/persona.component.html
+++ b/src/app/persona/persona.component.html
@@ -1,1 +1,14 @@
-<p>persona</p>
+<p>
+    Nombre: {{nombre}}
+    Apellido: {{apellido}}
+    Edad: {{edad}}
+</p>
+
+<!-- Interpolación nos permite manejar variables y lógicas dentro del template, como por ejemplo
+    este repetidor de información:
+ -->
+<!--  <div (keyup)='0'>
+    <label for="repetidor">Repetidor: </label>
+    <input #entrada type="text" name="repetidor"/>
+    {{entrada.value}}
+</div> -->
