--- a/src/app/personas/personas.component.html
+++ b/src/app/personas/personas.component.html
@@ -1,3 +1,18 @@
-<h1>Listado de personas</h1>
-<app-persona></app-persona>
-<app-persona></app-persona>
+<h1>Listado de personas</h1><br>
+<!-- Property binding es asociar los atributos de una etiqueta a una variable 
+    por ejemplo el atributo disabled-->
+<!-- Event binding permite escuchar los eventos del template y realizar diferentes acciones 
+    el evento a capturar va entre ()-->
+<!-- Two way binding enlaza el template con el componente y se escuchan eventos de ambos lados-->
+<button mat-raised-button color="primary" [disabled]='deshabilitar' (click)='agregarPersona()'>Agregar persona</button>
+<p>{{mensaje}}</p><br>
+<app-persona></app-persona><br>
+
+<mat-form-field class="example-form-field">
+    <mat-label>Titulo Persona</mat-label>
+    <input matInput type="text" [(ngModel)]="titulo" (input)='modificarTitulo($event)'>
+    <button *ngIf="titulo" matSuffix mat-icon-button aria-label="Clear" (click)="titulo=''">
+      <mat-icon>close</mat-icon>
+    </button>
+  </mat-form-field><br>
+  {{titulo}}
