Calculadora finalizada y practicando pruebas unitarias

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div style="text-align: center;">
-    <h1>Bienvenido: {{usuario}}!</h1><br>
-    <mat-slider min="1" max="100" step="1" value="1"></mat-slider><br>
-    <app-personas></app-personas>
+    <h1 id="titulo">Bienvenido: {{usuario}}!</h1><br>
+    <!-- App Lista de personas -->
+    <!-- <mat-slider min="1" max="100" step="1" value="1"></mat-slider><br>
+    <app-personas></app-personas> -->
+
+    <!-- App Calculadora -->
+    <app-calculadora></app-calculadora>
 </div>
